--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                      <input type="submit" value="Login">
                   </div>
                   <div class="signup-link">
-                     Not a member? <a href="">Signup now</a>
+                     Not a member yet? <a href="">Signup now</a>
                   </div>
                </form>
                <form action="connect.php" method="post" class="signup">
